# binbreak

./: .gitignore  Cargo.toml  README.md  build.sh  clippy.toml  main.diff  rustfmt.toml
.github/workflows/: ci.yml
src/: app.rs  binary_numbers.rs  keybinds.rs  main_screen_widget.rs  utils.rs
